--- a/style.css
+++ b/style.css
@@ -100,7 +100,7 @@ h3 {
 .edcontainer {
   display: grid;
   grid-template-columns: 1fr 2fr;
-  grid-template-rows: repeat(6, auto)
+  grid-template-rows: repeat(7, auto)
 }
 
 .ed-item1 {
@@ -161,6 +161,16 @@ h3 {
 .ed-item12 {
   grid-column: 2 / span 1;
   grid-row: 6 / span 1;
+}
+
+.ed-item13 {
+  grid-column: 1 / span 1;
+  grid-row: 7 / span 1;
+}
+
+.ed-item14 {
+  grid-column: 2 / span 1;
+  grid-row: 7 / span 1;
 }
 
 
